--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8" />
   <title>Digital Point - Inicio</title>
   <link rel="stylesheet" href="styles.css" />
+
+  <script>
+    // Redirige automáticamente a login.html al cargar la página
+    window.addEventListener('load', () => {
+      window.location.href = 'login.html';
+    });
+  </script>
 </head>
 <body>
   <header class="main-header">
