--- a/admin.html
+++ b/admin.html
@@ -7,11 +7,25 @@
 </head>
 <body>
   <header class="main-header">
+    <img src="img/logo.png" alt="Logo Digital Point">
     <h1>Digital Point - Admin</h1>
     <nav>
       <a href="#" onclick="logout()">Cerrar sesión</a>
     </nav>
   </header>
+  <style>
+     .main-header img {
+      height: 40px;
+      margin-right: 10px;
+    }
+
+    .header-left {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+  </style>  
+ 
 
   <main class="admin-panel">
     <section>
