--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Digital Point - Inicio</title>
-  <link rel="stylesheet" href="styles.css" />
-
   <script>
     // Redirige automáticamente a login.html al cargar la página
     window.addEventListener('load', () => {
@@ -14,21 +11,10 @@
 </head>
 <body>
   <header class="main-header">
-    <h1>Digital Point</h1>
-    <nav>
+    <nav></nav>
       <a href="login.html">Iniciar sesión</a>
       <a href="register.html">Registrarse</a>
     </nav>
   </header>
-
-  <section class="hero">
-    <h2>Bienvenido a Digital Point</h2>
-    <p>Tu tienda de confianza en portátiles e impresoras. Calidad, garantía y los mejores precios.</p>
-    <a class="btn" href="login.html">Comenzar ahora</a>
-  </section>
-
-  <footer>
-    <p>© 2025 Digital Point - Todos los derechos reservados.</p>
-  </footer>
 </body>
 </html>
