--- a/admin.html
+++ b/admin.html
@@ -4,62 +4,81 @@
   <meta charset="UTF-8" />
   <title>Admin - Digital Point</title>
   <link rel="stylesheet" href="styles.css" />
+  <style>
+    .main-header img { height: 40px; margin-right: 10px; }
+    .header-left { display: flex; align-items: center; gap: 10px; }
+    .seccion { display: none; margin-top: 20px; }
+    .btn { padding: 5px 10px; margin: 2px; }
+  </style>
 </head>
 <body>
   <header class="main-header">
-    <img src="img/logo.png" alt="Logo Digital Point">
-    <h1>Digital Point - Admin</h1>
+    <div class="header-left">
+      <img src="img/logo.png" alt="Logo Digital Point">
+      <h1>Digital Point - Admin</h1>
+    </div>
     <nav>
       <a href="#" onclick="logout()">Cerrar sesión</a>
     </nav>
   </header>
-  <style>
-     .main-header img {
-      height: 40px;
-      margin-right: 10px;
-    }
 
-    .header-left {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
-  </style>  
- 
+  <div class="container">
+    <div class="menu-opciones">
+  <button class="btn" type="button" onclick="mostrarSeccion('productos')">Gestión del catálogo</button>
+  <button class="btn" type="button" onclick="mostrarSeccion('ventas')">Registro de Ventas</button>
+</div>
 
-  <main class="admin-panel">
-    <section>
-      <h2>Gestión de Productos</h2>
-      <form id="productoForm" onsubmit="return agregarProducto();">
-        <input type="text" id="nombreProducto" placeholder="Nombre del producto" required />
-        <input type="number" id="precioProducto" placeholder="Precio (COP)" required />
-        <select id="categoriaProducto">
-          <option value="portatil">Portátil</option>
-          <option value="impresora">Impresora</option>
-        </select>
-        <!-- Cambio aquí: input file -->
-        <input type="file" id="imgProducto" accept="image/*" />
-        <button class="btn" type="submit">Agregar</button>
-      </form>
+    </div>
 
-      <h3>Inventario</h3>
-      <ul id="lista-productos"></ul>
-    </section>
+    <main class="admin-panel">
+      <section id="productos" class="seccion">
+        <h2>Gestión del catálogo</h2>
+        <form id="productoForm" onsubmit="return agregarProducto();">
+          <input type="text" id="nombreProducto" placeholder="Nombre del producto" required />
+          <input type="number" id="precioProducto" placeholder="Precio (COP)" required />
+          <select id="categoriaProducto">
+            <option value="portatil">Portátil</option>
+            <option value="impresora">Impresora</option>
+          </select>
+          <input type="file" id="imgProducto" accept="image/*" />
+          <button class="btn" type="submit">Agregar</button>
+        </form>
+        <h3>Inventario</h3>
+        <ul id="lista-productos"></ul>
+      </section>
 
-    <section>
-      <h2>Usuarios</h2>
-      <div id="listaUsuarios"></div>
-    </section>
-  </main>
+      <section id="ventas" class="seccion">
+        <h2>Registro de Ventas</h2>
+        <table id="tablaVentas">
+          <thead>
+            <tr>
+              <th>Fecha</th>
+              <th>Cliente</th>
+              <th>Producto</th>
+              <th>Cantidad</th>
+              <th>Total</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </section>
+    </main>
+  </div>
 
   <script>
+    function mostrarSeccion(id) {
+      document.querySelectorAll('.seccion').forEach(s => s.style.display = 'none');
+      document.getElementById(id).style.display = 'block';
+    }
+
+    // PRODUCTOS
     function mostrarProductos() {
       const lista = document.getElementById('lista-productos');
       const productos = JSON.parse(localStorage.getItem('productos')) || [];
-      if (!lista) return;
       lista.innerHTML = productos.length === 0 ? '<li>No hay productos.</li>' :
-       productos.map(p=>`<li>${p.nombre} - $${Number(p.precio).toLocaleString('es-CO')} (${p.categoria}) 
-        <button onclick="eliminarProducto(${p.id})">Eliminar</button></li>`).join('');
+        productos.map(p => `
+          <li>${p.nombre} - $${p.precio.toLocaleString('es-CO')} (${p.categoria}) 
+          <button onclick="eliminarProducto(${p.id})">Eliminar</button></li>`).join('');
     }
 
     function agregarProducto() {
@@ -67,48 +86,77 @@
       const precio = Number(document.getElementById('precioProducto').value);
       const categoria = document.getElementById('categoriaProducto').value;
       const fileInput = document.getElementById('imgProducto');
-      
-      if(!nombre || !precio) { alert('Completa los campos'); return false; }
+
+      if (!nombre || !precio) { alert('Completa los campos'); return false; }
 
       const productos = JSON.parse(localStorage.getItem('productos')) || [];
-      const id = productos.length ? (Math.max(...productos.map(p=>p.id))+1) : 1;
+      const id = productos.length ? Math.max(...productos.map(p => p.id)) + 1 : 1;
 
-      if(fileInput.files && fileInput.files[0]) {
-        const reader = new FileReader();
-        reader.onload = function(e) {
-          const imgData = e.target.result;
-          productos.push({ id, nombre, precio, categoria, img: imgData });
-          localStorage.setItem('productos', JSON.stringify(productos));
-          mostrarProductos();
-          alert('Producto agregado');
-          document.getElementById('productoForm').reset();
-        };
-        reader.readAsDataURL(fileInput.files[0]);
-      } else {
-        productos.push({ id, nombre, precio, categoria, img: 'https://via.placeholder.com/220x140' });
+      const guardarProducto = (imgData) => {
+        productos.push({ id, nombre, precio, categoria, img: imgData });
         localStorage.setItem('productos', JSON.stringify(productos));
         mostrarProductos();
         alert('Producto agregado');
         document.getElementById('productoForm').reset();
+      };
+
+      if (fileInput.files[0]) {
+        const reader = new FileReader();
+        reader.onload = e => guardarProducto(e.target.result);
+        reader.readAsDataURL(fileInput.files[0]);
+      } else {
+        guardarProducto('https://via.placeholder.com/220x140');
       }
 
       return false;
     }
 
     function eliminarProducto(id) {
-      if(!confirm('Eliminar producto?')) return;
+      if (!confirm('Eliminar producto?')) return;
       let productos = JSON.parse(localStorage.getItem('productos')) || [];
       productos = productos.filter(p => p.id !== id);
       localStorage.setItem('productos', JSON.stringify(productos));
       mostrarProductos();
     }
 
-    function mostrarUsuarios() {
+    // VENTAS
+    function mostrarVentas() {
       const usuarios = JSON.parse(localStorage.getItem('usuarios')) || [];
-      const cont = document.getElementById('listaUsuarios');
-      if (!cont) return;
-      cont.innerHTML = usuarios.length === 0 ? '<p>No hay usuarios.</p>' :
-        usuarios.map(u => `<div class="usuario-card"><b>${u.nombre}</b> - ${u.correo}</div>`).join('');
+      const tbody = document.querySelector('#tablaVentas tbody');
+      tbody.innerHTML = '';
+
+      usuarios.forEach(u => {
+        if (u.historial?.length) {
+          u.historial.forEach(h => {
+            // Aquí asumimos que h.tipo === 'Compra' y que guardamos los productos en h.libro como string
+            const productos = h.detalle || []; // por seguridad, pero cliente usa carrito para pago
+            if (productos.length) {
+              productos.forEach(p => {
+                const tr = document.createElement('tr');
+                tr.innerHTML = `
+                  <td>${h.fecha}</td>
+                  <td>${u.nombre}</td>
+                  <td>${p.nombre || p}</td>
+                  <td>${p.cantidad || 1}</td>
+                  <td>$${((p.cantidad || 1) * (p.precio || 0)).toLocaleString('es-CO')}</td>
+                `;
+                tbody.appendChild(tr);
+              });
+            } else {
+              // Si no hay detalle, mostramos el libro como string
+              const tr = document.createElement('tr');
+              tr.innerHTML = `
+                <td>${h.fecha}</td>
+                <td>${u.nombre}</td>
+                <td>${h.libro}</td>
+                <td>1</td>
+                <td>$${(h.total || 0).toLocaleString('es-CO')}</td>
+              `;
+              tbody.appendChild(tr);
+            }
+          });
+        }
+      });
     }
 
     function logout() {
@@ -116,7 +164,11 @@
       window.location.href = 'login.html';
     }
 
-    window.addEventListener('DOMContentLoaded', ()=>{ mostrarProductos(); mostrarUsuarios(); });
+    window.addEventListener('DOMContentLoaded', () => {
+      mostrarProductos();
+      mostrarVentas();
+      mostrarSeccion('productos');
+    });
   </script>
 </body>
 </html>
